fix: Adjust hash handling in file-handler and clean up HTML structure

--- a/momo/2025-07-29/momo.html
+++ b/momo/2025-07-29/momo.html
@@ -29,7 +29,6 @@
 
 	<header class="app-header">
 
-
 		<a href="" class="app-header__title" title="Home Page">Heritage Happenings</a>
 
 		<div class="app-header__actions">
@@ -64,8 +63,9 @@
 			<!-- Files will be populated by JavaScript -->
 		</ul>
 
-		<div class="dingbat-container" title="Hello! Click me to go up to the top"><a class="a-dingbat"
-				href="#file-list-header"> ❦ </a></div>
+		<div class="dingbat-container" title="Hello! Click me to go up to the top">
+			<a class="a-dingbat" href="#file-list-header"> ❦ </a>
+		</div>
 
 	</aside>
 
